# slog

./: README.md  build.sh  slog.conf
inc/: log2.h  logger.h  slog_async.h  slog_buf.h  slog_cfg.h  slog_compiler.h  slog_event.h  slog_fifo.h  slog_file.h  slog_inner.h  slog_port.h  slog_spec.h  slog_tcp.h
src/: logger.c  slog_async.c  slog_buf.c  slog_cfg.c  slog_event.c  slog_fifo.c  slog_file.c  slog_inner.c  slog_port.c  slog_spec.c  slog_tcp.c
test/: CMakeLists.txt  test_press_slog.c
